styles.css
/* ... */
.navbar-overlay.show {
    display: block;
    pointer-events: auto;
    backdrop-filter: blur(2px);
    z-index: 99;
}

#logo-header {
    user-select: none;
    transition: transform var(--clicked-feedback-time) ease;
}

#logo-header:active {
    transform: scale(0.85);
}

#logo-header img {
    user-select: none;
    cursor: pointer;
}


.nav-links a {
    transition: color var(--transition-duration) ease;
    user-select: none;
    transition: color var(--clicked-feedback-time) ease, transform var(--clicked-feedback-time) ease;
}

.nav-links a:active {
    color: var(--accent-color-bright);
    transform: scale(0.93);
}

.nav-toggle {
    user-select: none;
    justify-content: space-between;
    flex-direction: column;
}


.nav-svg {
    transition: transform var(--transition-duration) ease;
}

.nav-toggle.expanded .nav-svg {
    transform: rotate(45deg);
}

.nav-svg-line {
    transition: all var(--transition-duration) ease;
}

.nav-toggle.expanded .nav-svg-line {
    stroke-dasharray: 60 105 60 300;
    stroke-dashoffset: -90;
}

.image-placeholder {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    /* Maintain aspect ratio */
    border-radius: var(--border-radius);
    overflow: hidden;
    background-color: rgb(12, 12, 12);
    text-align: center;

}

.image-placeholder::before {
    content: attr(aria-label);
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.image-placeholder img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}


.lazy-load {
    opacity: 0;
    transition: opacity var(--transition-duration-fast) ease-in;
}

.lazy-load.loaded {
    opacity: 1;
}

.teacher .image-placeholder {
    padding-bottom: 100%;
    border-radius: 50%;
}


.contact-locations .image-placeholder {
    padding-bottom: 63%;
}

.gallery-container .image-placeholder {
    padding-bottom: 58%;
}

.gallery-container lite-youtube .image-placeholder {
    margin-block: 0.2rem;
    padding-bottom: 56.25%;
}

lite-youtube img {
    height: 100%;
}

.teacher .lazy-load,
.style-card .lazy-load {
    aspect-ratio: 1/1;
}

.style-card .image-placeholder {
    padding-bottom: 100%;
    border-radius: 25%;
}


.teacher .image-placeholder::before {
    border-radius: 50%;
}


.parallax-img {
    will-change: transform, opacity;
}



.floating-contact-button:active {
    transform: scale(0.93);
    /* Scale down on press */
    background-color: var(--accent-color-bright);
}


.contact-icon {
    transition: transform var(--transition-duration) ease;
}

.contact-menu a {
    transform: translateY(300%);
    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
}


/* Open state styles */
.floating-contact-button.open .contact-icon {
    transform: rotate(180deg) translateY(-0.1rem);
}

.floating-contact-button.open .contact-menu-container {
    pointer-events: auto;
}

.floating-contact-button.open .contact-menu a {
    opacity: 1;
    transform: translateY(0);
}

/* Staggered animation with CSS only */
.floating-contact-button.open .contact-menu li:nth-child(1) a {
    transition-delay: 0.1s;

}

.floating-contact-button.open .contact-menu li:nth-child(2) a {
    transition-delay: 0.05s;
}

.floating-contact-button.open .contact-menu li:nth-child(3) a {
    transition-delay: 0s;
}

.spacer {
    flex-grow: 1;
}

.styles-container {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    border-radius: var(--border-radius);
    gap: 1rem;
    flex-grow: 1;
}

.styles-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 2rem;
}

.style-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    background-color: var(--background-color);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-primary);
    padding-block: 2rem;
    padding-inline: 1rem;
    max-width: 350px;
    min-width: 260px;
    flex-basis: 25%;
}

.style-card>h3 {
    border-bottom: solid 0.2rem var(--primary-color-dark);
}

.watch-demo {
    cursor: pointer;
    background-color: rgba(35, 2, 54, 0.849);
    color: white;
    border: none;
    padding: 0.5rem 1rem;
    border-radius: var(--border-radius);
    font-size: 0.9rem;
    transition: background-color var(--transition-duration) ease,
        transform var(--clicked-feedback-time) ease;
    box-shadow: var(--box-shadow-cta);
}

.watch-demo:hover {
    background: var(--primary-color-light);
}

.watch-demo:active {
    transform: scale(0.95);
}

.video-modal {
    position: fixed;
    inset: 0;
    max-width: var(--viewport-width-desktop);
    margin-inline: auto;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 2000;
    background: rgba(0, 0, 0, 0.9);
    padding: 2rem;
    backdrop-filter: blur(2px);
    gap: 1rem;
}

.video-modal.show {
    display: flex;
}

.modal-content {
    position: relative;
    aspect-ratio: 0.5;
    height: 100%;
    margin-inline: auto;
    background: black;
    border-radius: var(--border-radius);
    overflow: hidden;
    /* border: solid 0.2rem var(--primary-color-dark); */

}

/* Update lite-youtube styles */
.video-modal lite-youtube {
    width: 100% !important;
    height: 100% !important;
    /* z-index: 2001 !important; */
    /* Ensure video is above modal background */
    pointer-events: auto !important;
    /* Allow interaction */
}

/* Update close button z-index */
.close-modal {
    align-self: flex-end;
    /* position: relative; */
    /* top: -3rem; */
    /* right: 0; */
    background: transparent;
    border: none;
    border-radius: 50%;
    padding: 1rem;
    cursor: pointer;
    /* z-index: 2020; */
    transition: background-color var(--transition-duration) ease;
}
/* ... */

